objects/Benefit_Header_Association__c.object
<CustomObject>
    <description>Conjunction object for Product2 and Benefit Header</description>
    <fields>
        <fullName>Benefit_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GSPS Benefit Header preference</description>
        <label>Benefit Header</label>
        <referenceTo>Benefit_Header__c</referenceTo>
        <relationshipLabel>Benefit Header Associations</relationshipLabel>
        <relationshipName>Benefit_Header_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mapped_Benefit_Header_Id__c</fullName>
        <label>Mapped Benefit Header Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapped_Product_Key__c</fullName>
        <label>Mapped Product Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Benefit Header Associations</relationshipLabel>
        <relationshipName>Benefit_Header_Associations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Benefit Header Association</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Benefit_Header__c</columns>
        <columns>Mapped_Benefit_Header_Id__c</columns>
        <columns>Mapped_Product_Key__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Benefit Header Association Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benefit Header Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>